// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon/> should render a custom icon 1`] = `
<span
  className="slds-icon_container slds-icon-custom-custom5"
  style={undefined}
  title={undefined}
>
  <svg
    aria-hidden="true"
    className="slds-icon"
  >
    <use
      xlinkHref="/icons/custom-sprite/svg/symbols.svg#custom5"
      xmlnsXlink="http://www.w3.org/1999/xlink"
    />
  </svg>
  <span
    className="slds-assistive-text"
  />
</span>
`;

exports[`<Icon/> should render a standard icon with size and style props 1`] = `
<span
  className="slds-icon_container slds-icon-standard-announcement"
  style={
    Object {
      "backgroundColor": "aqua",
      "borderRadius": "10px",
    }
  }
  title={undefined}
>
  <svg
    aria-hidden="true"
    className="slds-icon slds-icon_large"
  >
    <use
      xlinkHref="/icons/standard-sprite/svg/symbols.svg#announcement"
      xmlnsXlink="http://www.w3.org/1999/xlink"
    />
  </svg>
  <span
    className="slds-assistive-text"
  />
</span>
`;

exports[`<Icon/> should render a utility icon with title and variant props 1`] = `
<span
  className="slds-icon_container slds-icon-utility-like"
  style={undefined}
  title="like button"
>
  <svg
    aria-hidden="true"
    className="slds-icon slds-icon-text-light"
  >
    <use
      xlinkHref="/icons/utility-sprite/svg/symbols.svg#like"
      xmlnsXlink="http://www.w3.org/1999/xlink"
    />
  </svg>
  <span
    className="slds-assistive-text"
  />
</span>
`;

exports[`<Icon/> should render nothing when the iconName's format is wrong 1`] = `null`;
